--- a/Basit Mvc/Views/CustomerOrders/Index.cshtml
+++ b/Basit Mvc/Views/CustomerOrders/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Customer Details";
 }
-@model CustomerOrderViewModel
+@model Basit_Mvc.Models.CustomerOrderViewModel
 
 <!DOCTYPE html>
 
